tests/baselines/reference/scopeCheckInsideStaticMethod1.errors.txt
scopeCheckInsideStaticMethod1.ts(6,7): error TS2304: Cannot find name 'v'.
scopeCheckInsideStaticMethod1.ts(8,12): error TS2339: Property 'p' does not exist on type 'typeof C'.


==== scopeCheckInsideStaticMethod1.ts (2 errors) ====
    class C {
       private v;
       public p;
       static s;
       static b() {
          v = 1; // ERR
          ~
!!! error TS2304: Cannot find name 'v'.
          C.s = 1;
          this.p = 1; // ERR
               ~
!!! error TS2339: Property 'p' does not exist on type 'typeof C'.
       }
    }